<resources>
    <string name="app_name">KeyBoxLock</string>
    <string name="app_company">账号登录</string>
    <string name="name_hint">请输入手机号</string>
    <string name="password_hint">请输入登录密码</string>
    <string name="name_digits">0123456789</string>
    <string name="psw_digits">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="forget_password"><u>忘记密码？</u></string>
    <string name="forget_password1">忘记密码？</string>
    <string name="login">登录</string>
    <string name="register">注册新用户</string>
    <string name="toast_name_empet">用户名不能为空</string>
    <string name="toast_name_wrong">请输入登录账号</string>
    <string name="toast_psw_empet">密码不能为空</string>
    <string name="toast_login_successful">登录成功</string>
    <string name="toast_login_failed">登录失败</string>
    <string name="loadingtext">处理中，请稍等...</string>
    <string name="pass">跳 过 > ></string>
    <string name="double_click">再按一次退出程序</string>
    <string name="AppID_Toast">&#160;&#160;&#160;&#160;请替换 GOpenSource_AppKit/assets/UIConfig.json 中的参数定义为您申请到的机智云 app id、app secret、product key 等</string>
    <string name="getcode">获取验证码</string>
    <string name="getcode_again">重新获取验证码</string>
    <string name="timer_message">秒后重新获取</string>
    <string name="code_hint">请输入验证码</string>
    <string name="send_successful">手机验证码发送成功</string>
    <string name="send_failed">手机短信发送失败</string>
    <string name="toast_code_empet">验证码不能为空</string>
    <string name="toast_psw_wrong">请输入密码</string>
    <string name="toast_psw_short">密码不能小于6位</string>
    <string name="no_getcode">验证码无效</string>
    <string name="btn_register">立即注册</string>
    <string name="register_successful">注册成功</string>
    <string name="register_failed">注册失败</string>
    <string name="reset">重置密码</string>
    <string name="reset_successful">重置成功</string>
    <string name="reset_failed">重置失败</string>
    <string name="cancel">取消</string>
    <string name="my_home">温暖的家</string>
    <string name="add_device">添加设备</string>
    <string name="logout">注销</string>
    <string name="prompt">提示</string>
    <string name="logout1">确定要注销吗？</string>
    <string name="no">不了</string>
    <string name="besure">确定</string>
    <string name="remove_bound">解除绑定</string>
    <string name="unbound_failed">解绑失败</string>
    <string name="lock_exist">创建失败！当前锁已经存在！</string>
    <string name="set">设置</string>
    <string name="about">关于</string>
    <string name="control">控制</string>
    <string name="record">记录</string>
    <string name="user">用户</string>
    <string name="back">返回</string>
    <string name="searching">设备正在搜索中...</string>
    <string name="connect">设备已连接</string>
    <string name="on">开</string>
    <string name="off">关</string>
    <string name="lock">锁头:</string>
    <string name="lockbox">锁盒:</string>
    <string name="key">钥匙:</string>
    <string name="bat">电量:</string>
    <string name="lock1">锁头:0</string>
    <string name="lockbox1">锁盒:0</string>
    <string name="key1">钥匙:0</string>
    <string name="bat1">电量:0</string>
    <string name="loadinglock">等待锁就绪</string>
    <string name="allot">分配</string>
    <string name="history">历史</string>
    <string name="earlier">Earlier</string>
    <string name="former">Former</string>
    <string name="accredit">授权</string>
    <string name="delete">删除</string>
    <string name="owners">OWNERS</string>
    <string name="guests">GUESTS</string>
    <string name="allocate">分配成功</string>
    <string name="news">新消息</string>
    <string name="checknetwork">刷新失败,请检查网络后重新刷新</string>
    <string name="refresh_time">上次刷新时间</string>
    <string name="expire">权限已过期，请联系房东</string>
    <string name="notStart">权限还没有开始，请联系房东调整</string>
    <string name="notLock">你还没有上锁</string>
    <string name="notLockBox">您的锁盒没有关闭</string>
    <string name="notLock2">你还没有上锁并且您的锁盒也没有关闭</string>
    <string name="nophone">当前手机不支持蓝牙</string>
    <string name="nodevice">设备不支持支持蓝牙</string>
    <string name="besureallot">确定分配</string>
    <string name="guest">房客电话号码</string>
    <string name="indatetime">入住日期</string>
    <string name="outdatetime">结束日期</string>
    <string name="add_user">添加用户</string>
    <string name="date_error">退房的时间小于住房的时间</string>
    <string name="cnull">输入的内容为空</string>
    <string name="cerror">输入的内容有非法字符</string>
    <string name="years">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="last_update">The last update</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="devicelist_title">我的设备</string>
    <string name="offline_devices">离线设备</string>
    <string name="found_devices">发现新设备</string>
    <string name="havenot_device">没有设备</string>
    <string name="lock_list">锁列表</string>
    <string name="add_lock">加锁</string>
    <string name="room_name">房间名称</string>
    <string name="no_lan">远程</string>
    <string name="lan">局域网</string>
    <string name="unbind">未绑定</string>
    <string name="found_many_devices">发现多台设备名，点击选择配置设备</string>
    <string name="no_devices">暂无设备，请添加</string>
    <string name="no_room">No houses,please add</string>
    <string name="bound_divices">已绑定设备</string>
    <string name="bound_successful">绑定成功</string>
    <string name="bound_failed">绑定失败</string>
    <string name="setsubscribe_failed">订阅失败</string>
    <string name="cancel_logout">确定要退出账号？</string>
    <string name="doubleclick_logout">再次点击您将注销登录</string>
    <string name="doubleclick_back">再次点击可返回</string>
    <string name="appversion">程序版本：</string>
    <string name="SDKversion">SDK版本：</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="GIZ_SDK_PARAM_FORM_INVALID">SDK内部通讯数据格式无效</string>
    <string name="GIZ_SDK_CLIENT_NOT_AUTHEN">SDK未启动</string>
    <string name="GIZ_SDK_CLIENT_VERSION_INVALID">无效的SDK版本号</string>
    <string name="GIZ_SDK_UDP_PORT_BIND_FAILED">UDP端口绑定失败</string>
    <string name="GIZ_SDK_DAEMON_EXCEPTION">SDK后台服务发生异常</string>
    <string name="GIZ_SDK_PARAM_INVALID">接口参数无效</string>
    <string name="GIZ_SDK_APPID_LENGTH_ERROR">AppID长度错误</string>
    <string name="GIZ_SDK_LOG_PATH_INVALID">SDK日志路径无效</string>
    <string name="GIZ_SDK_LOG_LEVEL_INVALID">日志级别无效</string>
    <string name="GIZ_SDK_DEVICE_CONFIG_SEND_FAILED">设备配网信息发送失败</string>
    <string name="GIZ_SDK_DEVICE_CONFIG_IS_RUNNING">设备配网正在执行</string>
    <string name="GIZ_SDK_DEVICE_CONFIG_TIMEOUT">设备配网超时</string>
    <string name="GIZ_SDK_DEVICE_DID_INVALID">设备DID无效</string>
    <string name="GIZ_SDK_DEVICE_MAC_INVALID">设备MAC无效</string>
    <string name="GIZ_SDK_SUBDEVICE_DID_INVALID">子设备DID无效</string>
    <string name="GIZ_SDK_DEVICE_PASSCODE_INVALID">设备验证码无效</string>
    <string name="GIZ_SDK_DEVICE_NOT_SUBSCRIBED">设备还未订阅</string>
    <string name="GIZ_SDK_DEVICE_NO_RESPONSE">设备无响应</string>
    <string name="GIZ_SDK_DEVICE_NOT_READY">设备还未就绪</string>
    <string name="GIZ_SDK_DEVICE_NOT_BINDED">设备还未绑定</string>
    <string name="GIZ_SDK_DEVICE_CONTROL_WITH_INVALID_COMMAND">设备操作指令中包含无效指令</string>
    <string name="GIZ_SDK_DEVICE_CONTROL_FAILED">设备操作失败</string>
    <string name="GIZ_SDK_DEVICE_GET_STATUS_FAILED">设备状态获取失败</string>
    <string name="GIZ_SDK_DEVICE_CONTROL_VALUE_TYPE_ERROR">设备操作指令参数类型错误</string>
    <string name="GIZ_SDK_DEVICE_CONTROL_VALUE_OUT_OF_RANGE">设备操作指令参数值不在有效范围内</string>
    <string name="GIZ_SDK_DEVICE_CONTROL_NOT_WRITABLE_COMMAND">设备操作指令中包含不可写指令</string>
    <string name="GIZ_SDK_BIND_DEVICE_FAILED">设备绑定失败</string>
    <string name="GIZ_SDK_UNBIND_DEVICE_FAILED">设备解绑失败</string>
    <string name="GIZ_SDK_DNS_FAILED">DNS解析失败</string>
    <string name="GIZ_SDK_M2M_CONNECTION_SUCCESS">M2M服务器连接成功</string>
    <string name="GIZ_SDK_SET_SOCKET_NON_BLOCK_FAILED">socket非阻塞设置失败</string>
    <string name="GIZ_SDK_CONNECTION_TIMEOUT">连接超时</string>
    <string name="GIZ_SDK_CONNECTION_REFUSED">连接被拒绝</string>
    <string name="GIZ_SDK_CONNECTION_ERROR">发生了连接错误</string>
    <string name="GIZ_SDK_CONNECTION_CLOSED">连接被对端关闭</string>
    <string name="GIZ_SDK_SSL_HANDSHAKE_FAILED">ssl握手失败</string>
    <string name="GIZ_SDK_DEVICE_LOGIN_VERIFY_FAILED">设备登录验证失败</string>
    <string name="GIZ_SDK_INTERNET_NOT_REACHABLE">手机外网无法访问</string>
    <string name="GIZ_SDK_HTTP_ANSWER_FORMAT_ERROR">HTTP应答格式错误</string>
    <string name="GIZ_SDK_HTTP_ANSWER_PARAM_ERROR">HTTP应答数据错误</string>
    <string name="GIZ_SDK_HTTP_SERVER_NO_ANSWER">HTTP服务端无应答</string>
    <string name="GIZ_SDK_HTTP_REQUEST_FAILED">HTTP请求失败</string>
    <string name="GIZ_SDK_OTHERWISE">其他错误</string>
    <string name="GIZ_SDK_MEMORY_MALLOC_FAILED">内存分配失败</string>
    <string name="GIZ_SDK_THREAD_CREATE_FAILED">线程创建失败</string>
    <string name="GIZ_SDK_USER_ID_INVALID">登录用户ID无效</string>
    <string name="GIZ_SDK_TOKEN_INVALID">登录token无效</string>
    <string name="GIZ_SDK_GROUP_ID_INVALID">设备分组的组ID无效</string>
    <string name="GIZ_SDK_GROUPNAME_INVALID">设备分组的组名称无效</string>
    <string name="GIZ_SDK_GROUP_PRODUCTKEY_INVALID">设备分组的组类型无效</string>
    <string name="GIZ_SDK_GROUP_FAILED_DELETE_DEVICE">设备分组删除失败</string>
    <string name="GIZ_SDK_GROUP_FAILED_ADD_DEVICE">设备分组添加失败</string>
    <string name="GIZ_SDK_GROUP_GET_DEVICE_FAILED">设备分组获取失败</string>
    <string name="GIZ_SDK_DATAPOINT_NOT_DOWNLOAD">设备数据点配置文件还未下载</string>
    <string name="GIZ_SDK_DATAPOINT_SERVICE_UNAVAILABLE">设备数据点配置服务不可用</string>
    <string name="GIZ_SDK_DATAPOINT_PARSE_FAILED">设备数据点解析失败</string>
    <string name="GIZ_SDK_SDK_NOT_INITIALIZED">SDK还未初始化</string>
    <string name="GIZ_SDK_APK_CONTEXT_IS_NULL">Android context为空，无法启动SDK</string>
    <string name="GIZ_SDK_APK_PERMISSION_NOT_SET">使用SDK所需要的Android权限还没有设置</string>
    <string name="GIZ_SDK_CHMOD_DAEMON_REFUSED">SDK后台服务进程的执行权限修改失败</string>
    <string name="GIZ_SDK_EXEC_DAEMON_FAILED">SDK后台服务进程启动失败</string>
    <string name="GIZ_SDK_EXEC_CATCH_EXCEPTION">SDK后台服务进程启动发生异常</string>
    <string name="GIZ_SDK_APPID_IS_EMPTY">AppID为空，无法使用SDK</string>
    <string name="GIZ_SDK_UNSUPPORTED_API">此API已废弃，不再提供支持</string>
    <string name="GIZ_SDK_REQUEST_TIMEOUT">SDK接口执行超时</string>
    <string name="GIZ_SDK_DAEMON_VERSION_INVALID">SDK后台服务版本无效</string>
    <string name="GIZ_SDK_PHONE_NOT_CONNECT_TO_SOFTAP_SSID">手机没有连接设备热点</string>
    <string name="GIZ_SDK_DEVICE_CONFIG_SSID_NOT_MATCHED">手机当前Wifi与设备配网SSID不匹配，无法完成设备配网</string>
    <string name="GIZ_SDK_NOT_IN_SOFTAPMODE">设备没有在softap配网模式下</string>
    <string name="GIZ_SDK_PHONE_WIFI_IS_UNAVAILABLE">手机当前不是Wifi网络</string>
    <string name="GIZ_SDK_RAW_DATA_TRANSMIT">当前为原始数据透传方式</string>
    <string name="GIZ_SDK_PRODUCT_IS_DOWNLOADING">正在下载设备数据点配置文件</string>
    <string name="GIZ_SDK_START_SUCCESS">SDK启动成功</string>
    <string name="GIZ_SITE_PRODUCTKEY_INVALID">产品类型标识码无效</string>
    <string name="GIZ_SITE_DATAPOINTS_NOT_DEFINED">产品数据点未定义</string>
    <string name="GIZ_SITE_DATAPOINTS_NOT_MALFORME">产品数据点无效</string>
    <string name="GIZ_OPENAPI_MAC_ALREADY_REGISTERED">设备MAC已经注册</string>
    <string name="GIZ_OPENAPI_PRODUCT_KEY_INVALID">产品类型标识码无效</string>
    <string name="GIZ_OPENAPI_APPID_INVALID">AppID无效</string>
    <string name="GIZ_OPENAPI_TOKEN_INVALID">用户token无效</string>
    <string name="GIZ_OPENAPI_USER_NOT_EXIST">用户不存在</string>
    <string name="GIZ_OPENAPI_TOKEN_EXPIRED">用户token已过期</string>
    <string name="GIZ_OPENAPI_M2M_ID_INVALID">M2M ID无效</string>
    <string name="GIZ_OPENAPI_SERVER_ERROR">服务发生错误</string>
    <string name="GIZ_OPENAPI_CODE_EXPIRED">验证码已过期</string>
</resources>