<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="@color/yellow">

        <LinearLayout
            android:id="@+id/adduser_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/back" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/add_user"
            android:textColor="@color/black"
            android:textSize="20sp"/>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="30dp"
        android:background="@mipmap/login_logo"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_marginTop="20dp"
        android:gravity="center">
        <EditText
            android:id="@+id/et_guest"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:gravity="center"
            android:hint="@string/guest"
            android:digits="@string/name_digits"
            android:inputType="phone"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:background="@drawable/border_black"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_marginTop="10dp"
        android:gravity="center">
        <TextView
            android:id="@+id/tv_indatetime"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:gravity="center"
            android:hint="@string/indatetime"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:background="@drawable/border_black"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_marginTop="10dp"
        android:gravity="center">
        <TextView
            android:id="@+id/tv_outdatetime"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:hint="@string/outdatetime"
            android:background="@drawable/border_black"/>
    </RelativeLayout>
    <Button
        android:id="@+id/btn_besureallot"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/besureallot" />
</LinearLayout>