<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="@color/yellow">

        <LinearLayout
            android:id="@+id/adddevice_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            >

            <ImageView
                android:layout_width="10dp"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:background="@mipmap/back_bt"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/lock_list"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/add_lock"
            android:textColor="@color/black"
            android:textSize="20sp"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="30dp"
        android:background="@mipmap/login_logo"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_marginTop="30dp"
        android:gravity="center">
        <EditText
            android:id="@+id/et_roomname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:gravity="center"
            android:hint="@string/room_name"
            android:background="@drawable/border_black"/>
    </RelativeLayout>
    <Button
        android:id="@+id/btn_besure"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/besure" />

</LinearLayout>