<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:background="@color/yellow"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:text="@string/app_company"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="30dp"
        android:background="@mipmap/login_logo"/>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@mipmap/logo3"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="1dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="21dp"
            android:layout_marginRight="2dp"
            android:src="@mipmap/phone" />

        <EditText
            android:id="@+id/etName"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="19dp"
            android:background="@null"
            android:digits="@string/name_digits"
            android:ems="10"
            android:hint="@string/name_hint"
            android:inputType="phone"
            android:textColor="@color/black"
            android:text="13691467160"
            android:textColorHint="@color/text_gray_light"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:src="@mipmap/login_password" />

        <EditText
            android:id="@+id/etPsw"
            style="@style/EditTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="22dp"
            android:layout_weight="1"
            android:background="@null"
            android:digits="@string/psw_digits"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:text="qqqqqq"
            android:textColorHint="@color/text_gray_light"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/cbLaws"
            android:layout_width="25dp"
            android:layout_height="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/checkbox_laws_selector"
            android:button="@null" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvForget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/forget_password"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/register"
        android:textColor="@color/black" />
    </RelativeLayout>

    <Button
        android:id="@+id/btnLogin"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/tvForget"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/login" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_loginloading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/border_small"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        android:padding="20dp">

        <ProgressBar
            android:id="@+id/loading_process_dialog_progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="false"
            android:indeterminateDrawable="@drawable/loading" />

    </LinearLayout>

</RelativeLayout>